integration_tests/codegen_fail/fail/scalar/derive_input/attr_transparent_unit_struct.rs
use juniper::graphql_scalar;

#[graphql_scalar(transparent)]
struct ScalarSpecifiedByUrl;

fn main() {}
