integration_tests/codegen_fail/fail/scalar/derive_input/attr_transparent_unit_struct.stderr
error: GraphQL scalar expected exactly 1 field, e.g.: `Test(i32)`, `Test { test: i32 }` because of `transparent` attribute
 --> fail/scalar/derive_input/attr_transparent_unit_struct.rs:4:1
  |
4 | struct ScalarSpecifiedByUrl;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
